--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Balloon Number Game</title>
-  </head>
-  <body>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+<!doctype html>
+<html lang="vi">
+    <head>
+        <meta charset="UTF-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0, user-scalable=no"
+        />
+        <title>Game Chọn Số</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <!-- Container game -->
+        <div id="game-container"></div>
+
+        <!-- Overlay yêu cầu xoay ngang -->
+        <div id="rotate-msg">Vui lòng xoay ngang màn hình để chơi</div>
+
+        <script type="module" src="/src/main.ts"></script>
+    </body>
 </html>
