--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
     </head>
     <body>
         <!-- Container game -->
-        <div id="game-container"></div>
+        <div id="game-container">
+            <img
+                id="btn-reset"
+                class="ui-btn"
+                src="./public/assets/images/btn_reset.png"
+            />
+            <img
+                id="btn-exit"
+                class="ui-btn"
+                src="./public/assets/images/btn_exit.png"
+            />
+        </div>
 
         <!-- Overlay yêu cầu xoay ngang -->
         <div id="rotate-msg">Vui lòng xoay ngang màn hình để chơi</div>
