--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             <img
                 id="btn-reset"
                 class="ui-btn"
-                src="./assets/images/btn_reset.png"
+                src="./assets/images/btn_reset.webp"
             />
             <img
                 id="btn-exit"
                 class="ui-btn"
-                src="./assets/images/btn_exit.png"
+                src="./assets/images/btn_exit.webp"
             />
         </div>
 
