--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img
                 id="btn-reset"
                 class="ui-btn"
-                src="./assets/images/btn_reset.webp"
+                src="./assets/images/btn_reset.png"
             />
         </div>
 
